# mirabel_connect_four

./: Cargo.toml  README.md  test_surena.sh
.github/workflows/: test.yml
src/: bitvec.rs  frontend.rs  game.rs  lib.rs
