[package]
name = "mirabel_connect_four"
authors = ["vilaureu"]
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["mirabel"]
mirabel = ["mirabel/mirabel", "mirabel/skia"]

[dependencies.mirabel]
git = "https://github.com/vilaureu/mirabel_rs"
rev = "3a0973b1277c21c6d976988826b5f578c67d43c4"
default-features = false

[profile.release]
panic = "abort"
lto = "thin"
strip = true
