[package]
name = "mirabel_connect_four"
authors = ["vilaureu"]
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["mirabel"]
mirabel = ["mirabel/mirabel", "mirabel/skia"]

[dependencies.mirabel]
git = "https://github.com/vilaureu/mirabel_rs"
rev = "aae75608067ff8c97519c89c5b5f41cefeacde92"
default-features = false

[profile.release]
panic = "abort"
lto = "thin"
strip = true
