[package]
name = "mirabel_connect_four"
authors = ["vilaureu"]
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["mirabel"]
mirabel = ["mirabel/mirabel", "mirabel/skia"]

[dependencies.mirabel]
git = "https://github.com/vilaureu/mirabel_rs"
rev = "15b038154af764f67cfc3b0e1c5385cb2fa6d312"
default-features = false

[profile.release]
panic = "abort"
lto = "thin"
strip = true
